feat: upgrade to Spring Boot 3
also
- upgrade gradle
- massive refactor of the DAOs to use the new ElasticSearch Java client